--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="./favicon.ico" />
   <title></title>
+  <script type="module" src="/platform/web-girder/main.ts" defer></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 </head>
 
@@ -16,7 +17,6 @@
       continue.</strong>
   </noscript>
   <div id="app"></div>
-  <script type="module" src="../src/main.ts" defer></script>
   <!-- built files will be auto injected -->
 </body>
 
